--- a/Tao Bot Maker/Properties/strings.fr.resx
+++ b/Tao Bot Maker/Properties/strings.fr.resx
@@ -210,6 +210,9 @@
   <data name="action_Member_IfNotFound" xml:space="preserve">
     <value>Action si non trouvée</value>
   </data>
+  <data name="action_Member_IsCurrentPosClick" xml:space="preserve">
+    <value>Clic à la position actuelle</value>
+  </data>
   <data name="action_Member_IsDoubleClick" xml:space="preserve">
     <value>Double clic</value>
   </data>
@@ -273,6 +276,9 @@
   <data name="label_Ctrl" xml:space="preserve">
     <value>Ctrl</value>
   </data>
+  <data name="label_CurrentPosClick" xml:space="preserve">
+    <value>Clic à la position actuelle</value>
+  </data>
   <data name="label_DoubleClick" xml:space="preserve">
     <value>Double clic</value>
   </data>
@@ -293,6 +299,9 @@
   </data>
   <data name="label_MiddleClick" xml:space="preserve">
     <value>Clic molette</value>
+  </data>
+  <data name="label_MoveClick" xml:space="preserve">
+    <value>Déplacement</value>
   </data>
   <data name="label_RepeatNumber" xml:space="preserve">
     <value>Nombre de répétitions</value>
