--- a/Tao Bot Maker/Properties/strings.resx
+++ b/Tao Bot Maker/Properties/strings.resx
@@ -186,6 +186,9 @@
   <data name="action_ErrorMessage_Key_Lenght" xml:space="preserve">
     <value>Error : Key must be one letter</value>
   </data>
+  <data name="action_ErrorMessage_Key_NotEntered" xml:space="preserve">
+    <value>Error : Key must be entered</value>
+  </data>
   <data name="action_ErrorMessage_RepeatNumber" xml:space="preserve">
     <value>Error : Repeat number must be between -1 and 999999</value>
   </data>
@@ -275,6 +278,9 @@
   </data>
   <data name="button_FindImage" xml:space="preserve">
     <value>Find image</value>
+  </data>
+  <data name="button_Key_Unassigned" xml:space="preserve">
+    <value>Unassigned</value>
   </data>
   <data name="button_OK" xml:space="preserve">
     <value>OK</value>
