--- a/Tao Bot Maker/Properties/Resources.resx
+++ b/Tao Bot Maker/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="icons8-do-not-disturb-48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-do-not-disturb-481.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons8_pause_button_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-pause-button-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
