--- a/Tao Bot Maker/Resources/Strings.resx
+++ b/Tao Bot Maker/Resources/Strings.resx
@@ -147,6 +147,12 @@
   <data name="ButtonWaitForInput" xml:space="preserve">
     <value>Waiting for input</value>
   </data>
+  <data name="CaptionMessageDelete" xml:space="preserve">
+    <value>Deletion confirmation</value>
+  </data>
+  <data name="CaptionMessageFileExists" xml:space="preserve">
+    <value>Existing file</value>
+  </data>
   <data name="ComboBoxSpeedFast" xml:space="preserve">
     <value>Fast</value>
   </data>
@@ -248,6 +254,9 @@
   </data>
   <data name="ImageActionToString" xml:space="preserve">
     <value>Search image : "{0}" between coordinates : {1} and {2} for {3} ms.</value>
+  </data>
+  <data name="InfoMessageDeletedSequence" xml:space="preserve">
+    <value>Sequence "{0}" has been permantly deleted.</value>
   </data>
   <data name="InfoMessageExecuteAction" xml:space="preserve">
     <value>Executing action : {0}.</value>
@@ -474,9 +483,6 @@
   <data name="MenuSettingsTheme" xml:space="preserve">
     <value>Theme</value>
   </data>
-  <data name="MessageCaptionFileExists" xml:space="preserve">
-    <value>Existing file</value>
-  </data>
   <data name="MouseActionName" xml:space="preserve">
     <value>Mouse</value>
   </data>
@@ -497,6 +503,9 @@
   </data>
   <data name="MouseActionToStringScrollBy" xml:space="preserve">
     <value>Scroll by : {0}</value>
+  </data>
+  <data name="QuestionMessageDelete" xml:space="preserve">
+    <value>Do you want to delete it ?</value>
   </data>
   <data name="QuestionMessageReplace" xml:space="preserve">
     <value>Do you want to replace it ?</value>
@@ -527,6 +536,9 @@
   </data>
   <data name="Warning" xml:space="preserve">
     <value>Warning</value>
+  </data>
+  <data name="WarningMessageDeleteSequence" xml:space="preserve">
+    <value>Sequence "{0}" will be permantly deleted.</value>
   </data>
   <data name="WarningMessageUnsavedChanges" xml:space="preserve">
     <value>Unsaved changes will be lost.</value>
