--- a/Tao Bot Maker/Resources/Strings.resx
+++ b/Tao Bot Maker/Resources/Strings.resx
@@ -447,6 +447,12 @@
   <data name="MenuBot" xml:space="preserve">
     <value>Bot</value>
   </data>
+  <data name="MenuBotPause" xml:space="preserve">
+    <value>Pause</value>
+  </data>
+  <data name="MenuBotResume" xml:space="preserve">
+    <value>Resume</value>
+  </data>
   <data name="MenuBotStart" xml:space="preserve">
     <value>Start</value>
   </data>
